# ai-fxdealer

./: .dockerignore  .env.example  .env.test  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/references/ctrader/: README.md  capture_manager_api.py  capture_schema.py  manager-api.md
.claude/references/ctrader/docs/: 01-manager-api.md  02-reporting-api.md  03-webservices-api.md  04-broker-sso-oauth.md  05-ctrader-copy.md  06-repo-db.md  07-deeplinks.md  (+3 more)
.claude/references/mql4/: API.md  Administrator.md  Terminal.md  index.md  manager.md  metaeditor.md  multiterminal.md
.claude/references/mql5/: API.md  android.md  client.md  index.md  iphone.md  manager.md  metaeditor.md  platform.md
.claude/references/mt4-endpoint/: 00_server_time.md  01_connect_login.md  01_connection.md  02_user_record.md  02_user_record_live.md  02_users_request.md  03_trade_record.md  03_trade_record_live.md  03_trades_open.md  04_margin_level.md  04_margin_level_live.md  04_trades_history.md  05_online_record.md  05_online_record_live.md  05_symbols.md  06_groups.md  06_symbol_info.md  06_symbol_info_live.md  07_server_logs.md  07_summary_exposure.md  07_summary_live.md  08_chart_request_live.md  08_chart_ticks.md  08_online_sessions.md  08b_ticks_request_live.md  09_daily_reports.md  09_exposure.md  09_reports_request_live.md  10_margin.md  10_news_mail.md  11_groups_config.md  11_summary.md  12_journal_request_live.md  12_reports.md  12_server_journal.md  13_ticks.md  13_trade_transaction.md  14_pumping_mode.md  15_backup.md  README.md  (+1 more)
.claude/references/mt5-endpoint/: 01_user_get.md  02_user_get_by_group.md  03_user_request.md  03b_user_account_get.md  03c_user_account_request.md  04_deal_request.md  04b_deal_request_by_group.md  04d_dealer_balance.md  05_position_get_by_group.md  05b_position_get_by_logins.md  05c_position_request.md  05d_position_request_by_group.md  06_order_get_by_group.md  06b_order_get_by_logins.md  06c_order_request_open.md  07_history_request.md  07b_history_request_by_group.md  08_symbol_get_array.md  08b_symbol_get.md  08c_symbol_request.md  08d_symbol_request_array.md  09_group_request_array.md  09b_group_request.md  10_tick_last.md  10b_tick_stat.md  10c_tick_history_request.md  11_summary_get_all.md  12_exposure_get_all.md  13_daily_request.md  13b_daily_request_by_group.md  14_online_get_array.md  15_news.md  16_client_request_by_group.md  17_book_get.md  18_trade_margin_check.md  18b_trade_profit.md  19_user_add_update.md  20_user_password_change.md  21_request_get.md  22_leverage_get.md  (+4 more)
.claude/skills/mt4-integration/: SKILL (5).md  SKILL.md
.claude/skills/mt5-integration/: SKILL.md
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  providers.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/app/login/: page.tsx
dashboard/components/layout/: Sidebar.tsx
dashboard/components/ui/: StatCard.tsx
dashboard/lib/: api.ts  utils.ts
docker/: Dockerfile.api  Dockerfile.collector  Dockerfile.dashboard  Dockerfile.migrate  docker-compose.test.yml  docker-compose.yml
scripts/: create_test_user.py  run_pipeline.py  test_collectors.py  test_ctrader.py  test_mt4_history.py
services/api/: config.py  database.py  main.py  pyproject.toml
services/api/middleware/: auth.py
services/api/routes/: accounts.py  auth.py  collectors.py  deals.py  overview.py  positions.py  raw_tables.py  rules.py  ticks.py  users.py
services/collector-ctrader/: collector.py  manager_client.py  pyproject.toml
services/collector-fxbo/: collector.py  pyproject.toml
services/collector-mt4/: collector.py  ctypes_wrapper.py  pyproject.toml
services/collector-mt5/: collector.py  pyproject.toml
services/rule-engine/: __init__.py  base_rule.py  engine.py  group_reconciler.py  log_parser.py
services/rule-engine/normalizers/: __init__.py  ctrader.py  mt4.py  mt5.py
services/rule-engine/rules/: __init__.py  larb.py  pge.py  sfa.py
services/rule-engine/tests/: test_base_rule.py
tests/unit/: conftest.py  test_mt4_collector.py  test_mt5_collector.py
(+3540 files in other folders)
