[project]
name = "ai-fxdealer"
version = "0.1.0"
requires-python = ">=3.11"

# Monorepo root — workspace members listed below.
# Install all packages: uv sync --all-packages
# Run migrations:       uv run --package db alembic upgrade head
# Run collector worker: uv run --package queue arq queue.workers.collector_worker.WorkerSettings

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",      # async test client for FastAPI
    "fakeredis>=2.23",  # in-memory Redis for tests
]

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/db",
    "packages/queue",
    "services/api",
    "services/collector-mt5",
    "services/collector-mt4",
    "services/collector-ctrader",
    "services/collector-fxbo",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "services", "packages"]
python_files = "test_*.py"
python_functions = "test_*"
