[project]
name = "collector-mt4"
version = "0.1.0"
requires-python = ">=3.11"
# Windows-only service — MT4 Manager API DLL is Windows-only binary

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "structlog>=24.0",
    "arq>=0.25",
    "shared",
    "db",
    "queue",
]

[tool.uv.sources]
shared = { path = "../../packages/shared" }
db     = { path = "../../packages/db" }
queue  = { path = "../../packages/queue" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
